src/components/UI/Inputs/DropdownInput/DropdownInput.module.scss
.dropdown {
  text-align: left;
  border: 1px solid $greenColor;
  position: relative;
  border-radius: rem(4);

  &__input {
    padding: rem(8);
    font-size: rem(18);
    color: $greenColor;
    display: flex;
    align-items: center;
    justify-content: space-between;
    cursor: pointer;
    user-select: none;
  }

  &__menu {
    position: absolute;
    transform: translateY(rem(4));
    width: 100%;
    border: 1px solid $greenColor;
    border-radius: rem(4);
    overflow: auto;
    max-height: rem(150);
    background-color: #fff;

    &::-webkit-scrollbar {
      width: rem(8);
    }
    &::-webkit-scrollbar-track {
      -webkit-box-shadow: inset 0 0 6px #e6e2dd;
    }
    &::-webkit-scrollbar-thumb {
      background-color: $orangeColor;
      border-radius: rem(16);
    }
  }

  &__tool {
    display: flex;
    font-size: rem(16);
    color: $greenColor;
    transition: transform ease 0.3s;

    &.active {
      transform: rotate(180deg);
      transition: transform ease 0.3s;
    }
  }

  &__item {
    padding: rem(4);
    min-height: rem(30);
    color: $greenColor;
    cursor: pointer;

    &.selected {
      color: #fff;
      background-color: $orangeColor;
    }

    &:hover {
      color: #fff;
      background-color: $orangeColor;
    }
  }
}

